spl2/hn_tests/failing/flip3-2.hn
hnMain = {
	flip f = {
		flipped x = f x
		flipped
	}
	print ((flip incr) 2)
}